SCFOOT-193 fixed displaying on mobile and tablet

--- a/imports/ui/stylesheets/home-page.scss
+++ b/imports/ui/stylesheets/home-page.scss
@@ -39,6 +39,12 @@
     &__stars{
         color: #FAD70C;
         padding: 10px 0;
+        @include tablet{
+            text-align: center;
+        }
+        @include mobile{
+            text-align: center;
+        }
     }
     &__text{
         padding: 30px;
